# python-data-tests

./: README.md  pyproject.toml  setup.py
data_model/: sample_data.py
src/: attrs_testing.py  dc_testing.py  ge_testing.py  pandera_testing.py  pydantic_testing.py
