[tool.poetry]
name = "python-testing"
version = "0.1.0"
description = ""
authors = ["Melar3 <med.taha.inpt@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src/**/*", from = "." },
    { include = "data_model/**/*", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"
pandera = "^0.16.1"
great-expectations = "^0.17.11"
setuptools = "^68.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
